combined-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-4-all
spec:
  tls:
  - hosts:
    - megaitservices.com.ng
    secretName: sharkapp-tls
  rules:
  - host: megaitservices.com.ng
    http:
      paths:
      - path: /sharkapp
        pathType: Prefix
        backend:
          service: 
            name: sharkapp
            port: 
              number: 8001
        namespace: sharkapp
      - path: /sockshop
        pathType: Prefix
        backend:
          service: 
            name: front-end
            port: 
              number: 80
        namespace: sock-shop
      - path: /sock-prometheus
        pathType: Prefix
        backend:
          service: 
            name: prometheus
            port: 
              number: 9090
        namespace: monitoring
      - path: /sock-grafana
        pathType: Prefix
        backend:
          service: 
            name: grafana
            port: 
              number: 80
        namespace: monitoring
